--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,23 @@ h1 {
     margin: 10px auto;
 }
 
-.red {
-    background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+.cap{
+    width: 60px;
+    height: 25px;
 }
 
 .sleeve {
     width: 110px;
     height: 25px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 50%);
+}
+
+.sleeve, .cap {
+    display: inline-block;
+}
+
+.red {
+    background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
 }
 
 .green {
