--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,7 @@ h1 {
     width: 110px;
     height: 25px;
     background-color: rgba(255, 255, 255, 50%);
-    border-left-width: 10px;
-    border-left-style: solid;
+    border-left: 10px double black;
 }
 
 .sleeve, .cap {
